# gans_for_maps

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
checkpoints/maps_test/: loss_log.txt  train_opt.txt
checkpoints/maps_test/web/: index.html
checkpoints/maps_test_2/: loss_log.txt  train_opt.txt
checkpoints/maps_test_2/web/: index.html
data/raw/fantasy_csvs/: 1fantasy_urls.csv  1medieval_urls.csv  1old_urls.csv  2medieval_urls.csv  2old_urls.csv  3old_urls.csv
data/raw/style/: stl_10.jfif
data/raw/styles_oam/: stl_13.jfif  stl_16.jfif  stl_17.jfif  stl_19.jfif  stl_20.jfif  stl_6.jfif  stl_7.jfif
docs/: mkdocs.yml
docs/docs/: index.md
gans_for_maps/: __init__.py  dataset.py  features.py  plots.py
gans_for_maps/modeling/: predict.py  train.py
models/: __init__.py  base_model.py  train.py
notebooks/: 1.01-smg-data_source.ipynb  1.01-smg-metric-concept.ipynb  data.py  open_aerial_map.py  sentinel2.py
options/: base_options.py  train_options.py
references/: main.go
reports/: reporte_ae.ipynb  reporte_gan.ipynb  reporte_gan_goodone.html  reporte_gans_for_maps.html
scripts/: fid_check_gm.py  fid_check_oam.py  fid_check_sentinel.py  open_aerial_map.py  sentinel2.py
tools_data/: __init__.py  base_dataset.py  image_folder.py  unaligned_dataset.py
util/: get_data.py  html.py  image_pool.py  util.py  visualizer.py
